# Cognitive-Dimension-Aware-Memory

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  experiment-comparison.md  experiment_comparison_table.md  google_scholer.bib  paper_cn.tex  paper_en.tex  patch.txt  pyproject.toml  消融实验设置.md
harbor/: compare_ablation.py  extract_memories.py  pull_images.py  pyproject.toml  run_tasks.py
harbor/adapters/aime/: adapter.py  aime.yaml
harbor/adapters/bigcodebench_hard/: parity_experiments.json
harbor/adapters/qcircuitbench/: README.md  parity_experiment.json
harbor/adapters/swebench/: adapter.py  run_adapter.py  utils.py
harbor/config/: cognitive_retrieval.yaml
harbor/configs/experiments/: e10_no_environment.yaml  e10_no_strategic.yaml  e11_no_environment.yaml  e11_no_trajectory.yaml  e12_no_trajectory.yaml  e12_no_workflow.yaml  e13_no_summary.yaml  e13_no_workflow.yaml  e14_no_summary.yaml  e14_random_memory.yaml  e15_llm_direct_topk.yaml  e19_gpt4o.yaml  (+37 more)
harbor/experiments/: run_aider-polyglot.py  run_autocodebench.py  run_bigcodebench.py  run_bixbench.py  run_compilebench.py  run_deveval.py  run_ds-1000.py  run_evoeval.py  run_livecodebench.py  run_mlgym-bench.py  run_qcircuitbench.py  run_replicationbench.py  run_research-code-bench.py  run_spider2-dbt.py  run_swebench.py  run_swebenchpro.py  run_swtbench.py  run_terminalbench2.py  run_usaco.py
mini-swe-agent-main/: .gitignore  README.md
mini-swe-agent-main/docs/: index.md
scripts/: batch_fix_dockerfiles.py  setup_mini_swe_agent.ps1  setup_mini_swe_agent.sh
src/mtl/: __init__.py  llm.py
(+65 files in other folders)
